fixed horizontal overflow bug on list view

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -12,7 +12,10 @@
     }
 }
 
-
+.page-content {
+    max-width: 100vw;
+    overflow: hidden;
+}
 
 .hero-body {
     max-width: 70%;
